--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ img {
 
 a { color: #554E48; }
 
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+	color: #000000;
+}
+
 .form_input {
 	width: 100%;
 	vertical-align: top;
