--- a/style.css
+++ b/style.css
@@ -86,8 +86,9 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	border-width: 0px 0px 1px 0px;
 }
 
-.alertContent{
+.alertContent td{
 	background: rgb(247, 247, 247);
+	text-align: center;
 }
 
 .alertTitle a {
@@ -126,7 +127,12 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	font-size: 7pt;
 }
 
-.submitButton {
+.submitButtonRow {
+	text-align: center;
+	padding-top: 5px;
+}
+
+.submitButtonRow input {
 	background-color: #ffffff;
 	border-style: solid;
 	border-width: 1px;
