--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 	color: #000000;
 }
 
+form {
+	margin: 0;
+	padding: 0;
+}
+
 .form_input {
 	width: 80%;
 	vertical-align: top;
